# FloodScope2025

./: .dockerignore  .env.docker  .env.sample  .gitignore  .replit  DEPLOYMENT_GUIDE.md  Dockerfile  INSTALL-LOCAL.md  README-Docker-Complete.md  README-Docker.md  README.md  app.py  app_redesigned.py  build-docker-complete.sh  debug_assam_flood.py  docker-compose.complete.yml  docker-compose.yml  email_alerts.py  flood_analysis_fixed.py  install.bat  install.sh  modern_ui.py  pyproject.toml  requirements-local.txt  run-docker.bat  run-docker.sh  run_local.py  setup_github.bat  setup_github.sh  test_india_api.py
.github/: docker-deploy.yml
attached_assets/: Pasted--Assam-Flood-Situation-on-June-8-2025-Assam-is-currently-experiencing-significant-flooding-as-of-1749331371230_1749331371231.txt  Pasted-Essential-Features-to-Add-or-Improve-1-Multi-Parameter-Monitoring-Integrate-multiple-real-time-data-1748848057484.txt  Pasted-Natural-Disasters-Introduction-The-Ambee-natural-disasters-API-delivers-comprehensive-natural-disast-1748419775448.txt  Pasted-Run-flutter-build-apk-release-Upgrading-build-gradle-Running-Gradle-task-assembleRelease--1748463076949.txt  Pasted-Skip-to-content-Navigation-Menu-Savitha11111-floodapp-Type-to-search-Code-Issues-Pull-requests-Ac-1748462307150.txt  Pasted-Skip-to-content-Navigation-Menu-Savitha11111-floodapp-Type-to-search-Code-Issues-Pull-requests-Ac-1748463182099.txt  Pasted-Skip-to-content-Navigation-Menu-Savitha11111-floodapp-Type-to-search-Code-Issues-Pull-requests-Ac-1748465462023.txt  app.py  chat.py  content-1748596758634.md  (+7 more)
(+108 files in other folders)
